@@ -98,14 +98,6 @@ PATCHES ACCEPTED TO BACKPORT FROM TRUNK:
      2.2.x patch: http://people.apache.org/~minfrin/httpd-mod_cache-304-fix-2.patch
      +1: minfrin, jim, covener
 
-   * core: honor "AcceptPathInfo OFF" for internal redirects, such as those
-     generated by mod_rewrite in per-dir context.  This would be left floating
-     around in the request_rec with a pcalloc'ed value, so the core fixup
-     hook thought some module had overridden it. PR 50349.
-     Trunk patch: http://svn.apache.org/viewvc?rev=1043023&view=rev
-     2.2.x patch: http://people.apache.org/~covener/patches/2.2.x-accept_pathinfo_redir.diff
-    +1 covener, rpluem, jorton
-
    * mod_dav: If a malformed Content-Range header is received for a PUT request,
      we must not use the supplied content per RFC 2616 14.16. Send 400 response
      instead of ignoring the Content-Range.
